Remove `GET /v1/proposes?publicKey=...` endpoint (#18)
* Remove GET /v1/proposes?publicKey=... endpoint

* Remove GET /v1/proposes?publicKey=... from all documentation
